# cricdata

./: README.md  architecture.md  pyproject.toml
cricdata/: __init__.py  _espn.py  _session.py  _ssr.py  _statsguru.py  _types.py  client.py
